--- a/views/root.handlebars
+++ b/views/root.handlebars
@@ -1,3 +1,12 @@
-<h1>Hello world</h1>
+<body class="rootBody">
 
-Welcome back
+
+<div class="section1">
+  <h1>Aarticle</h1>
+  {{#if currentUser}}
+    <a class="CTA" href="/new-article">Create New Article</a>
+    <p>Click the button above to create a new article!</p>
+  {{else}}
+  <h3>You must log in to create an article</h3>
+  {{/if}}
+</div>
