--- a/views/article-show.handlebars
+++ b/views/article-show.handlebars
@@ -1,1 +1,8 @@
-here?
+<a style="margin-left: 2rem;" href="/">Back to Home</a>
+
+  <center>
+    <div class="articleBox">
+      <h1>{{article.title}}</h1>
+      <h3>By: {{article.username}}</h1>
+      <p>{{article.content}}</p>
+  </center>
