--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,10 @@
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-
+  <script src="https://unpkg.com/multiaddr/dist/index.min.js"></script>
+  <!-- OR -->
+  <script src="https://unpkg.com/multiaddr/dist/index.js"></script>
+  
   <script src="/js/scripts.js"></script>
 
 </body>
