--- a/views/root.handlebars
+++ b/views/root.handlebars
@@ -16,7 +16,7 @@
 
 {{#each article}}
 <div class="articleBox2">
-<a href="/article/{{this._id}}">{{this.title}}</a>
+<a class="whiteout" href="/article/{{this._id}}">{{this.title}}</a>
 <p>By: {{this.username}}</p>
 </div>
 {{/each}}
